Added exceptions, DTO for game, update UserService and GameService